# shadow

./: CMakeLists.txt  calculating.cpp  calculating.h  main.cpp  mainwindow.cpp  mainwindow.h
